# openai_swarm_agents

./: pyproject.toml
openai_swarm/: manager_agent.py
planner_agent/: agents.py  run.py  tools.py
triage_agent/: tools.py
